kv-flexvol-installer.yml
apiVersion: v1
kind: Namespace
metadata:
  name: kv
---
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  labels:
    app: keyvault-flexvolume
  name: keyvault-flexvolume
  namespace: api-dev
spec:
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: keyvault-flexvolume
    spec:
      tolerations:
      containers:
      - name: flexvol-driver-installer
        image: "mcr.microsoft.com/k8s/flexvolume/keyvault-flexvolume:v0.0.15"
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 50m
            memory: 100Mi
          limits:
            cpu: 50m
            memory: 100Mi
        volumeMounts:
        - mountPath: "/etc/kubernetes/volumeplugins"
          name: volplugins
      volumes:
      - hostPath:
          # Modify this directory if your nodes are using a different one
          # default is "/usr/libexec/kubernetes/kubelet-plugins/volume/exec" 
          # below is Azure default
          path: "/etc/kubernetes/volumeplugins" 
        name: volplugins
      nodeSelector:
        beta.kubernetes.io/os: linux
