poi.yaml
apiVersion: v1
kind: Service
metadata:
  name: poi
  labels:
    run: poi
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    run: poi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi-deployment
  labels:
    app: poi-test-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: poi
  template:
    metadata:
      labels:
        app: poi
    spec:
      containers:
      - name: poi
        image: registrymoq4816.azurecr.io/tripinsights/poi:latest
        ports:
        - containerPort: 80
