trips.yaml
apiVersion: v1
kind: Service
metadata:
  name: trips
  labels:
    run: trips
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: trips
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trip-deployment
  labels:
    app: trips-test-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: trips
  template:
    metadata:
      labels:
        app: trips
    spec:
      containers:
      - name: trips
        image: registrymoq4816.azurecr.io/tripinsights/trips:latest
        ports:
        - containerPort: 80
