tripviewer.yaml
apiVersion: v1
kind: Service
metadata:
  name: tripviewer
  labels:
    run: tripviewer
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: tripviewer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripviewer-deployment
  labels:
    app: tripviewer-test-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tripviewer
  template:
    metadata:
      labels:
        app: tripviewer
    spec:
      containers:
      - name: tripviewer
        image: registrymoq4816.azurecr.io/tripinsights/tripviewer:latest
        ports:
        - containerPort: 80
